--- a/index.html
+++ b/index.html
@@ -6,28 +6,44 @@
 <title>Hexy - Content & Email Marketing</title>
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<!-- Bootstrap Icons -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
 <style>
     body {
-        background-color: #fff;
-        color: #000;
+        background-color: #f8f9fa;
+        color: #212529;
+    }
+    .navbar {
+        background-color: #000;
+    }
+    .navbar-brand, .navbar-nav .nav-link {
+        color: #fff !important;
     }
     .hero {
-        background-color: #000;
+        background: #000;
         color: #fff;
         padding: 100px 20px;
         text-align: center;
     }
-    .hero button {
-        background-color: #fff;
-        color: #000;
+    .hero h1 {
+        font-size: 3rem;
+        margin-bottom: 20px;
     }
-    .section-title {
-        margin: 50px 0 20px;
-        font-size: 2rem;
+    .hero p {
+        font-size: 1.2rem;
+        margin-bottom: 30px;
+    }
+    .about p {
+        font-size: 1.1rem;
+        line-height: 1.6;
+    }
+    .card {
+        border: none;
+        border-radius: 10px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     }
     .contact-form input,
     .contact-form textarea {
-        border: 1px solid #000;
         border-radius: 0;
     }
     .contact-form button {
@@ -38,52 +54,92 @@
     footer {
         background-color: #000;
         color: #fff;
-        padding: 20px 0;
+        padding: 30px 0;
+    }
+    .social-icons a {
+        color: #fff;
+        margin: 0 10px;
+        font-size: 1.5rem;
     }
 </style>
 </head>
 <body>
 
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg sticky-top">
+    <div class="container">
+        <a class="navbar-brand" href="#">Hexy</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
 <!-- Hero Section -->
 <section class="hero">
-    <h1>Hexy</h1>
-    <p>Expert Content Writing, Technical Writing, Newsletter Management, & Email Marketing</p>
-    <button class="btn btn-light mt-3" onclick="openCal()">Book a Call</button>
+    <div class="container">
+        <h1>Welcome to Hexy</h1>
+        <p>Crafting compelling content, managing newsletters, and boosting email marketing engagement for your business success.</p>
+        <button class="btn btn-light btn-lg" onclick="openCal()">Book a Call</button>
+    </div>
 </section>
 
 <!-- About Section -->
-<section class="container my-5">
-    <h2 class="section-title text-center">About Us</h2>
-    <p class="text-center">Hexy helps businesses craft compelling content, streamline newsletter management, and enhance their email marketing strategies for optimal engagement.</p>
+<section id="about" class="container my-5">
+    <h2 class="text-center mb-4">About Us</h2>
+    <p class="text-center">Hexy specializes in content writing, technical documentation, newsletter management, and email marketing. Our mission is to help businesses connect with their audience through impactful, well-crafted content and efficient email strategies.</p>
 </section>
 
 <!-- Services Section -->
-<section class="container my-5">
-    <h2 class="section-title text-center">Our Services</h2>
-    <div class="row text-center">
-        <div class="col-md-3 mb-4">
-            <h5>Content Writing</h5>
-            <p>Engaging and SEO-friendly content to captivate your audience.</p>
+<section id="services" class="container my-5">
+    <h2 class="text-center mb-4">Our Services</h2>
+    <div class="row g-4">
+        <div class="col-md-3">
+            <div class="card text-center">
+                <div class="card-body">
+                    <h5 class="card-title">Content Writing</h5>
+                    <p class="card-text">Engaging, SEO-friendly content to captivate your audience.</p>
+                </div>
+            </div>
         </div>
-        <div class="col-md-3 mb-4">
-            <h5>Technical Writing</h5>
-            <p>Clear and concise documentation for your products and services.</p>
+        <div class="col-md-3">
+            <div class="card text-center">
+                <div class="card-body">
+                    <h5 class="card-title">Technical Writing</h5>
+                    <p class="card-text">Clear and precise documentation for your products.</p>
+                </div>
+            </div>
         </div>
-        <div class="col-md-3 mb-4">
-            <h5>Newsletter Management</h5>
-            <p>Effective strategies to manage and grow your subscriber base.</p>
+        <div class="col-md-3">
+            <div class="card text-center">
+                <div class="card-body">
+                    <h5 class="card-title">Newsletter Management</h5>
+                    <p class="card-text">Effective strategies for managing your subscribers.</p>
+                </div>
+            </div>
         </div>
-        <div class="col-md-3 mb-4">
-            <h5>Email Marketing</h5>
-            <p>Targeted email campaigns to boost engagement and conversions.</p>
+        <div class="col-md-3">
+            <div class="card text-center">
+                <div class="card-body">
+                    <h5 class="card-title">Email Marketing</h5>
+                    <p class="card-text">Targeted campaigns to increase engagement.</p>
+                </div>
+            </div>
         </div>
     </div>
 </section>
 
 <!-- Contact Section -->
-<section class="container my-5">
-    <h2 class="section-title text-center">Contact Us</h2>
-    <p class="text-center">If you have any questions or want to work with us, reach out at <a href="mailto:kumar@hexy.me">kumar@hexy.me</a></p>
+<section id="contact" class="container my-5">
+    <h2 class="text-center mb-4">Contact Us</h2>
+    <p class="text-center">Reach out to us at <a href="mailto:kumar@hexy.me">kumar@hexy.me</a> or send us a message below:</p>
     <div class="row justify-content-center">
         <div class="col-md-6">
             <form class="contact-form">
@@ -104,10 +160,16 @@
 
 <!-- Footer -->
 <footer class="text-center">
-    <p>&copy; 2024 Hexy. All rights reserved.</p>
+    <div class="social-icons">
+        <a href="#"><i class="bi bi-facebook"></i></a>
+        <a href="#"><i class="bi bi-twitter"></i></a>
+        <a href="#"><i class="bi bi-linkedin"></i></a>
+        <a href="#"><i class="bi bi-instagram"></i></a>
+    </div>
+    <p class="mt-3">&copy; 2024 Hexy. All rights reserved.</p>
 </footer>
 
-<!-- Bootstrap JS (for responsive components) -->
+<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 <!-- Cal.com Embed Script -->
