Update meeting link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             Crafting compelling content and driving engagement through expert strategies.
                         </p>
                     </div>
-                    <a href="https://cal.com/hexy/meeting" class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background bg-white text-black hover:bg-gray-200 h-10 py-2 px-4">
+                    <a href="https://tidycal.com/kumar1/30-minute-meeting" class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background bg-white text-black hover:bg-gray-200 h-10 py-2 px-4">
                         Book a Meeting
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="ml-2 h-4 w-4">
                             <polyline points="9 18 15 12 9 6"></polyline>
