--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                     </div>
                 </div>
             </div>
+            <div class="tidycal-embed" data-path="kumar1/30-minute-meeting"></div><script src="https://asset-tidycal.b-cdn.net/js/embed.js" async></script>
         </section>
         <section id="services" class="w-full py-12 md:py-24 lg:py-32 bg-gray-100">
             <div class="container px-4 md:px-6 mx-auto">
