--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,6 +22,7 @@
         }
     </script>
 </head>
+
 <body class="flex flex-col min-h-screen bg-white text-black">
     <header class="px-4 lg:px-6 h-16 flex items-center">
         <a href="#" class="flex items-center justify-center">
@@ -45,9 +47,12 @@
                             Crafting compelling content and driving engagement through expert strategies.
                         </p>
                     </div>
-                    <a href="https://tidycal.com/kumar1/30-minute-meeting" class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background bg-white text-black hover:bg-gray-200 h-10 py-2 px-4">
+                    <a href="https://tidycal.com/kumar1/30-minute-meeting"
+                        class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background bg-white text-black hover:bg-gray-200 h-10 py-2 px-4">
                         Book a Meeting
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="ml-2 h-4 w-4">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="ml-2 h-4 w-4">
                             <polyline points="9 18 15 12 9 6"></polyline>
                         </svg>
                     </a>
@@ -59,24 +64,29 @@
                 <div class="flex flex-col items-center justify-center space-y-4 text-center">
                     <div class="space-y-2">
                         <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl">About Hexy</h2>
-                        <p class="mx-auto max-w-[700px] text-gray-500 md:text-xl/relaxed lg:text-base/relaxed xl:text-xl/relaxed">
-                            We are experts in crafting high-quality content, managing newsletters, and driving effective email marketing
+                        <p
+                            class="mx-auto max-w-[700px] text-gray-500 md:text-xl/relaxed lg:text-base/relaxed xl:text-xl/relaxed">
+                            We are experts in crafting high-quality content, managing newsletters, and driving effective
+                            email marketing
                             campaigns. Our mission is to help businesses thrive in the digital landscape.
                         </p>
                     </div>
                 </div>
             </div>
-            <div class="tidycal-embed" data-path="kumar1/30-minute-meeting"></div><script src="https://asset-tidycal.b-cdn.net/js/embed.js" async></script>
         </section>
         <section id="services" class="w-full py-12 md:py-24 lg:py-32 bg-gray-100">
             <div class="container px-4 md:px-6 mx-auto">
-                <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl mb-8 text-center">Our Services</h2>
+                <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl mb-8 text-center">Our Services
+                </h2>
                 <div class="grid gap-6 lg:grid-cols-2">
                     <div class="rounded-lg border bg-card text-card-foreground shadow-sm">
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold leading-none tracking-tight flex items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-6 h-6 mr-2">
-                                    <path d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z"></path>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="w-6 h-6 mr-2">
+                                    <path d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z">
+                                    </path>
                                     <polyline points="14 2 14 8 20 8"></polyline>
                                     <line x1="16" y1="13" x2="8" y2="13"></line>
                                     <line x1="16" y1="17" x2="8" y2="17"></line>
@@ -85,31 +95,41 @@
                                 Content Writing
                             </h3>
                             <p class="text-sm text-muted-foreground pt-2">
-                                Engaging, SEO-friendly content creation that resonates with your audience and drives results.
+                                Engaging, SEO-friendly content creation that resonates with your audience and drives
+                                results.
                             </p>
                         </div>
                     </div>
                     <div class="rounded-lg border bg-card text-card-foreground shadow-sm">
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold leading-none tracking-tight flex items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-6 h-6 mr-2">
-                                    <path d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z"></path>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="w-6 h-6 mr-2">
+                                    <path d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z">
+                                    </path>
                                     <polyline points="14 2 14 8 20 8"></polyline>
                                     <path d="M10 12a1 1 0 0 0-1 1v1a1 1 0 0 1-1 1 1 1 0 0 1 1 1v1a1 1 0 0 0 1 1"></path>
-                                    <path d="M14 18a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1 1 1 0 0 1-1-1v-1a1 1 0 0 0-1-1"></path>
+                                    <path d="M14 18a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1 1 1 0 0 1-1-1v-1a1 1 0 0 0-1-1">
+                                    </path>
                                 </svg>
                                 Technical Writing
                             </h3>
                             <p class="text-sm text-muted-foreground pt-2">
-                                Clear and concise technical documentation that simplifies complex concepts for your users.
+                                Clear and concise technical documentation that simplifies complex concepts for your
+                                users.
                             </p>
                         </div>
                     </div>
                     <div class="rounded-lg border bg-card text-card-foreground shadow-sm">
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold leading-none tracking-tight flex items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-6 h-6 mr-2">
-                                    <path d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-2 2Zm0 0a2 2 0 0 1-2-2v-9c0-1.1.9-2 2-2h2"></path>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="w-6 h-6 mr-2">
+                                    <path
+                                        d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-2 2Zm0 0a2 2 0 0 1-2-2v-9c0-1.1.9-2 2-2h2">
+                                    </path>
                                     <path d="M18 14h-8"></path>
                                     <path d="M15 18h-5"></path>
                                     <path d="M10 6h8v4h-8V6Z"></path>
@@ -117,29 +137,52 @@
                                 Newsletter Management
                             </h3>
                             <p class="text-sm text-muted-foreground pt-2">
-                                Strategies for subscriber growth and engagement, keeping your audience informed and connected.
+                                Strategies for subscriber growth and engagement, keeping your audience informed and
+                                connected.
                             </p>
                         </div>
                     </div>
                     <div class="rounded-lg border bg-card text-card-foreground shadow-sm">
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold leading-none tracking-tight flex items-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-6 h-6 mr-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="w-6 h-6 mr-2">
                                     <rect width="20" height="16" x="2" y="4" rx="2"></rect>
                                     <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
                                 </svg>
                                 Email Marketing
                             </h3>
                             <p class="text-sm text-muted-foreground pt-2">
-                                Targeted email campaigns that boost client engagement and drive conversions for your business.
+                                Targeted email campaigns that boost client engagement and drive conversions for your
+                                business.
                             </p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <section id="contact" class="w-full pt-12 md:pt-24 lg:pt-32">
+            <div class="container px-4 md:px-6 mx-auto">
+                <div class="flex flex-col items-center justify-center space-y-4 text-center">
+                    <div class="space-y-2 pb-6 md:pb-12 lg:pb-24">
+                        <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl">Reach out to Hexy</h2>
+                        <p
+                            class="mx-auto max-w-[700px] text-gray-500 md:text-xl/relaxed lg:text-base/relaxed xl:text-xl/relaxed">
+                            Ready to take your content and email marketing strategy to the next level? Let’s connect!
+                            Book a virtual meeting with us to discuss how Hexy can help you create compelling content,
+                            streamline newsletter management, and boost email engagement. Click the button below to
+                            schedule a call at your convenience.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="tidycal-embed" data-path="kumar1/30-minute-meeting"></div>
+            <script src="https://asset-tidycal.b-cdn.net/js/embed.js" async></script>
+        </section>
     </main>
-    <footer id="contact" class="flex flex-col gap-2 sm:flex-row py-6 w-full shrink-0 items-center px-4 md:px-6 border-t">
+    <footer id="contact"
+        class="flex flex-col gap-2 sm:flex-row py-6 w-full shrink-0 items-center px-4 md:px-6 border-t">
         <p class="text-xs text-gray-500">© 2024 Hexy. All rights reserved.</p>
         <nav class="sm:ml-auto flex gap-4 sm:gap-6">
             <a class="text-xs hover:underline underline-offset-4" href="mailto:kumar@hexy.me">kumar@hexy.me</a>
@@ -148,4 +191,5 @@
         </nav>
     </footer>
 </body>
+
 </html>
