--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hexy - Elevate Your Digital Presence</title>
+<!--     Upade -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
